Cambiando el home

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
+					<!-- <h1><a href="index.html">Alpha</a> by HTML5 UP</h1>  -->
+					<img  class="logo" src="images/MAO.png" alt="">
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -44,11 +45,11 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>Alpha</h2>
-					<p>Another fine responsive site template freebie by HTML5 UP.</p>
+					<h2>Cambia una Vida</h2>
+					<p>Puedes adquirir:</p>
 					<ul class="actions special">
-						<li><a href="#" class="button primary">Sign Up</a></li>
-						<li><a href="#" class="button">Learn More</a></li>
+						<li><a href="#" class="button primary">Productos</a></li>
+						<li><a href="#" class="button primary">Servicios</a></li>
 					</ul>
 				</section>
 
