--- a/servicePerson.html
+++ b/servicePerson.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Service</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body>
-    <div class="container">
+<body class="is-preload">
+    <div id="page-wrapper">
         <header id="header">
             <h1><a href="index.html">MakeOpportunity</a> el cambio puedes ser tú.</h1>
             <nav id="nav">
@@ -19,24 +19,41 @@
                 </ul>
             </nav>
         </header>
-        <section>
-            <header>
-                <img src="">
-                <ul>
-                    <li>
-                        Edad: 16 años.
-                    </li>
-                    <li>
-                        Hijos: Uno.
-                    </li>
-                    <li>
-                        Sueño: Ser un gran chef.
-                    </li>
-                </ul>
+        <div>
+            <p><img src="./images/boycode.jpg"></p>
+            <ul>
+                <li> Edad: 16 años. </li>
+                <li> Hijos: Uno.</li>
+                <li> Sueño: Ser un gran chef.</li>
+            </ul>
+        </div>
+        <footer id="footer">
+            <ul class="icons">
+                <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+                <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+                <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+            </ul>
+            <ul class="copyright">
+                <li>&copy; Untitled. All rights reserved.</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </footer>
 
+    </div>
 
-            </header>
-        </section>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.dropotron.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <!-- <script src="assets/js/events.js"></script> -->
+
     </div>
 </body>
 
